# NPadNoise

./: CMakeLists.txt  LICENSE.md  README.md
src/: NPadNoise.cpp  NPadNoise.hpp  NPadNoiseGen.cpp  NPadNoiseGenOctave.cpp
